[gd_scene load_steps=25 format=3 uid="uid://d2oyjj2d3bk2b"]

[ext_resource type="Script" uid="uid://dmtkdwpne7rwi" path="res://Scripts/Player/PlayerMovement.gd" id="1_dewec"]
[ext_resource type="Script" uid="uid://dyi3vlfqm4bdl" path="res://Scripts/Player/PlayerCamera.gd" id="2_glx4g"]
[ext_resource type="Shader" uid="uid://b42u06q8c0xy5" path="res://Shaders/Player/Bloom.gdshader" id="4_0kmp4"]
[ext_resource type="Script" uid="uid://2utrou1krv5t" path="res://Scripts/Inventory/CompartmentUI.gd" id="5_5ixxa"]
[ext_resource type="Script" uid="uid://dawk1dcnjggnh" path="res://Scripts/Inventory/Items/Item.gd" id="6_52ee3"]
[ext_resource type="Shader" uid="uid://dcjol5wn7jipg" path="res://Shaders/Player/PostProcess.gdshader" id="6_miouo"]
[ext_resource type="Texture2D" uid="uid://chw2sl3s8qj2h" path="res://Images/icon.svg" id="7_52ee3"]
[ext_resource type="Texture2D" uid="uid://kbevcyv5t7g7" path="res://Images/CheckeredPattern.png" id="8_bhhdu"]
[ext_resource type="PackedScene" uid="uid://bcqaucxjnurud" path="res://Scenes/Player/Inventory/Bag.tscn" id="9_megsn"]
[ext_resource type="Script" uid="uid://bqp2ddovbbyse" path="res://Scripts/Inventory/Bag/BagCamera.gd" id="10_ksbbd"]
[ext_resource type="Script" uid="uid://frsbljmuu5p5" path="res://Scripts/Inventory/Bag/BagViewport.gd" id="10_yoq75"]
[ext_resource type="Shader" uid="uid://bdam1gj7xpr86" path="res://Shaders/Bag/HightLight.gdshader" id="12_i5acl"]
[ext_resource type="Script" uid="uid://fcy6n0ng8vk3" path="res://Scripts/SelectionViewport.gd" id="13_epg6k"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ksbbd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wwrpy"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_dewec"]
dof_blur_far_enabled = true
dof_blur_far_transition = 3.0
dof_blur_near_enabled = true
dof_blur_amount = 0.07

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5m5cn"]
frequency = 0.11
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_eayxn"]
width = 2000
height = 2000
seamless_blend_skirt = 0.0
noise = SubResource("FastNoiseLite_5m5cn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o3h8g"]
shader = ExtResource("6_miouo")
shader_parameter/darken_multiply = 0.7
shader_parameter/fisheye_amount = 1.5
shader_parameter/ca_red_offset = 0.001
shader_parameter/ca_green_offset = 3.25988e-09
shader_parameter/ca_blue_offset = -0.000999997
shader_parameter/ca_intensity = 1.0
shader_parameter/vignette_intensity = 1.0
shader_parameter/vhs_resolution = Vector2(1500, 1500)
shader_parameter/vhs_samples = 3
shader_parameter/vhs_crease_noise = 1.0
shader_parameter/vhs_crease_opacity = 0.5
shader_parameter/vhs_filter_intensity = 0.0
shader_parameter/vhs_noise_texture = SubResource("NoiseTexture2D_eayxn")
shader_parameter/vhs_tape_crease_smear = 0.2
shader_parameter/vhs_tape_crease_intensity = 0.1
shader_parameter/vhs_tape_crease_jitter = 0.1
shader_parameter/vhs_tape_crease_speed = 0.5
shader_parameter/vhs_tape_crease_discoloration = 0.0
shader_parameter/vhs_bottom_border_thickness = 3.0
shader_parameter/vhs_bottom_border_jitter = 6.0
shader_parameter/vhs_noise_intensity = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i5acl"]
shader = ExtResource("4_0kmp4")
shader_parameter/threshold = 0.7
shader_parameter/soft_knee = 0.6
shader_parameter/strength = 1.0
shader_parameter/taps = 14
shader_parameter/length_px = 200.0
shader_parameter/falloff = 0.8
shader_parameter/tint_top = Vector3(0.95, 1, 0.98)
shader_parameter/tint_bottom = Vector3(1, 0.95, 0.98)
shader_parameter/clamp_output = true
shader_parameter/width_px = 1.5
shader_parameter/column_pitch_px = 1.0
shader_parameter/snap_columns = true
shader_parameter/gaussian_profile = true
shader_parameter/peak_search_px = 0

[sub_resource type="Resource" id="Resource_bhhdu"]
script = ExtResource("6_52ee3")
item_name = "New Item"
description = ""
texture = ExtResource("7_52ee3")
size = Vector2i(2, 2)
stackable = false
max_stack_size = 1
metadata/_custom_type_script = "uid://dawk1dcnjggnh"

[sub_resource type="Resource" id="Resource_megsn"]
script = ExtResource("6_52ee3")
item_name = "New Item"
description = ""
texture = ExtResource("8_bhhdu")
size = Vector2i(1, 1)
stackable = false
max_stack_size = 1
metadata/_custom_type_script = "uid://dawk1dcnjggnh"

[sub_resource type="World3D" id="World3D_yoq75"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0u84n"]
shader = ExtResource("12_i5acl")
shader_parameter/line_color = Vector3(0.9, 0.6, 0.1)
shader_parameter/line_thickness = 2.0

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(0.499999, 0, 0, 0, 0.5, 0, 0, 0, 0.499999, 0, 0, 0)
script = ExtResource("1_dewec")

[node name="Body" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_ksbbd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_wwrpy")

[node name="Head" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.566768, 0)
cull_mask = 1048573
attributes = SubResource("CameraAttributesPractical_dewec")
fov = 85.0
script = ExtResource("2_glx4g")

[node name="PlayerTorch" type="SpotLight3D" parent="Head/Camera"]
unique_name_in_owner = true
light_color = Color(1, 1, 0.839216, 1)
light_energy = 16.0
light_volumetric_fog_energy = 0.0
shadow_enabled = true
shadow_blur = 5.545
distance_fade_begin = 2.0
distance_fade_shadow = 1204.84
distance_fade_length = 745.73
spot_range = 15.0
spot_angle = 41.918
spot_angle_attenuation = 4.2871

[node name="BlurCast" type="RayCast3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.566768, 0)
target_position = Vector3(0, 0, -2)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenEffects" type="Control" parent="UI"]
anchors_preset = 0

[node name="PostProcess" type="CanvasLayer" parent="UI/ScreenEffects"]

[node name="ColorRect" type="ColorRect" parent="UI/ScreenEffects/PostProcess"]
material = SubResource("ShaderMaterial_o3h8g")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="UI/ScreenEffects"]

[node name="ColorRect" type="ColorRect" parent="UI/ScreenEffects/CanvasLayer"]
material = SubResource("ShaderMaterial_i5acl")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="CanvasLayer" parent="UI/Inventory"]
unique_name_in_owner = true
layer = 2

[node name="LeftCompartment" type="Control" parent="UI/Inventory/Inventory"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Compartment1" type="GridContainer" parent="UI/Inventory/Inventory/LeftCompartment"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -618.0
offset_top = -309.0
offset_bottom = 309.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 4
script = ExtResource("5_5ixxa")
compartment_size = Vector2i(4, 4)
test_item = SubResource("Resource_bhhdu")
test_item2 = SubResource("Resource_megsn")

[node name="RightCompartment" type="Control" parent="UI/Inventory/Inventory"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Compartment2" type="GridContainer" parent="UI/Inventory/Inventory/RightCompartment"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -309.0
offset_right = 618.0
offset_bottom = 309.0
grow_vertical = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 4
script = ExtResource("5_5ixxa")
compartment_size = Vector2i(4, 4)
test_item = SubResource("Resource_bhhdu")
test_item2 = SubResource("Resource_megsn")

[node name="BackCompartment" type="Control" parent="UI/Inventory/Inventory"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Compartment3" type="GridContainer" parent="UI/Inventory/Inventory/BackCompartment"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -309.0
offset_top = -498.0
offset_right = 309.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 4
script = ExtResource("5_5ixxa")
compartment_size = Vector2i(5, 3)
test_item = SubResource("Resource_bhhdu")
test_item2 = SubResource("Resource_megsn")

[node name="FrontCompartment" type="Control" parent="UI/Inventory/Inventory"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Compartment4" type="GridContainer" parent="UI/Inventory/Inventory/FrontCompartment"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -309.0
offset_right = 309.0
offset_bottom = 513.0
grow_horizontal = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 4
script = ExtResource("5_5ixxa")
compartment_size = Vector2i(4, 3)
test_item = SubResource("Resource_bhhdu")
test_item2 = SubResource("Resource_megsn")

[node name="Hud" type="Control" parent="UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DebugInfo" type="CanvasLayer" parent="UI/Hud"]
layer = 2

[node name="DebugInfo" type="Label" parent="UI/Hud/DebugInfo"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0

[node name="BagViewport" type="SubViewportContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="UI/BagViewport"]
unique_name_in_owner = true
world_3d = SubResource("World3D_yoq75")
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4
script = ExtResource("10_yoq75")

[node name="Camera3D" type="Camera3D" parent="UI/BagViewport/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.28215, 0)
script = ExtResource("10_ksbbd")

[node name="Bag" parent="UI/BagViewport/SubViewport/Camera3D" instance=ExtResource("9_megsn")]
unique_name_in_owner = true
transform = Transform3D(0.499999, 0, 0, 0, 0.5, 0, 0, 0, 0.499999, 0, -0.065, -1.2)

[node name="BagTorch" type="SpotLight3D" parent="UI/BagViewport/SubViewport/Camera3D"]
unique_name_in_owner = true
layers = 3
light_color = Color(1, 1, 0.839216, 1)
light_volumetric_fog_energy = 0.0
shadow_enabled = true
shadow_blur = 5.545
distance_fade_begin = 2.0
distance_fade_shadow = 1204.84
distance_fade_length = 745.73
spot_range = 7.0
spot_angle = 41.918
spot_angle_attenuation = 4.2871

[node name="SubViewportContainer" type="SubViewportContainer" parent="UI"]
material = SubResource("ShaderMaterial_0u84n")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13_epg6k")

[node name="OutlineViewport" type="SubViewport" parent="UI/SubViewportContainer"]
world_3d = SubResource("World3D_yoq75")
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4
script = ExtResource("10_yoq75")

[node name="Camera" type="Camera3D" parent="UI/SubViewportContainer/OutlineViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.282, 0)
cull_mask = 2
